Fixed linking css to html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Feedback Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Feedback Form</h1>
     <label>User Name: 
         <input type="text" name="username" id="username">
     </label><br>
