Added a character counter... also forgot to link the js to html too so did that as well

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
          <input type="email" name="email" id="email"><br>
     
     <label>Comments: </label><br>
-        <textarea name="comments" id="comments"></textarea><br>
+        <textarea id="comments" placeholder="Type your comment..."></textarea>
+        <div>Characters: <span id="charCount">0</span></div>
     
     <input type="button" value="submit">
     </form>
 
     <div id="feedback-display"></div>
+    <script src="cp_1.js"></script>
 </body>
 </html>
