--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <label>Email: </label><br>
          <input type="email" name="email" id="email"><br>
     
-    <label>Comments: </label><br>
+    <div class="tooltip">Comments: 
+        <span class="tooltiptext">Please write a meaningful comment</span></div><br>
         <textarea id="comments" placeholder="Type your comment..."></textarea>
         <div>Characters: <span id="charCount">0</span></div>
     
